admin able to add student

--- a/server/api/.env
+++ b/server/api/.env
@@ -1,4 +1,4 @@
 #MONGO = mongodb://Abinaya:Abinaya251@cluster0.ocvpvbh.mongodb.net/?retryWrites=true&w=majority
-MONGO = mongodb+srv://Abinaya:abinaya251@cluster0.ocvpvbh.mongodb.net/booking?retryWrites=true&w=majority
+MONGO = mongodb+srv://admin:admin@cluster1.rn5tqmj.mongodb.net/?retryWrites=true&w=majority
 #MONGO = mongodb+srv://bala:bala@cluster0.gdt5h.mongodb.net/booking?retryWrites=true&w=majority
 JWT = ssd+42nnmm32skdosnijkl=erwsa
